se implemento un ligero padding en la parte inferio de la app en la version mobile, para que las tarjetas se puedan visualizar de manera correcta cuando se encuentra en la parte final de la hoja

--- a/src/app/application/compras/layout.module.css
+++ b/src/app/application/compras/layout.module.css
@@ -59,10 +59,10 @@
 
 @media (max-width: 900px) {
   .compras {
-    height: 100%;
+    height: auto;
     width: 100%;
     margin: 0;
-
+    padding-bottom: 5rem;
     border-radius: 0;
   }
   .header {
