--- a/src/app/application/compras/proveedor/proveedor.module.css
+++ b/src/app/application/compras/proveedor/proveedor.module.css
@@ -8,8 +8,7 @@
   width: 100%;
   display: flex;
   flex-direction: column;
-  padding: 1.5rem;
-  /* background-color: aliceblue; */
+  padding: 1rem;
 }
 
 .title {
@@ -47,4 +46,14 @@
   flex-wrap: wrap;
   gap: 3rem;
   justify-content: space-around;
+}
+
+@media (max-width: 900px) {
+  .title {
+    text-align: center;
+  }
+  .buttons {
+    margin-top: 1.5rem;
+    width: 100%;
+  }
 }
